Haskell /2.10 - try again /ParClike.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParClike.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp9 -> Exp9                               (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp4 -> Exp4                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp2 -> Exp2                               (16)
	%start_pExp -> Exp                                 (17)
	%start_pExp1 -> Exp1                               (18)
	%start_pExp5 -> Exp5                               (19)
	%start_pExp6 -> Exp6                               (20)
	%start_pExp7 -> Exp7                               (21)
	%start_pExp10 -> Exp10                             (22)
	%start_pListExp -> ListExp                         (23)
	%start_pType -> Type                               (24)
	%start_pListId -> ListId                           (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	String -> L_quoted                                 (28)
	Id -> L_Id                                         (29)
	Program -> ListDef                                 (30)
	ListDef ->                                         (31)
	ListDef -> ListDef Def                             (32)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (33)
	ListArg ->                                         (34)
	ListArg -> Arg                                     (35)
	ListArg -> Arg ',' ListArg                         (36)
	ListStm ->                                         (37)
	ListStm -> ListStm Stm                             (38)
	Arg -> Type Id                                     (39)
	Stm -> Exp ';'                                     (40)
	Stm -> Type Id ';'                                 (41)
	Stm -> Type Id ',' ListId ';'                      (42)
	Stm -> Type Id '=' Exp ';'                         (43)
	Stm -> 'return' Exp ';'                            (44)
	Stm -> 'while' '(' Exp ')' Stm                     (45)
	Stm -> '{' ListStm '}'                             (46)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (47)
	Exp15 -> Integer                                   (48)
	Exp15 -> Double                                    (49)
	Exp15 -> String                                    (50)
	Exp15 -> 'true'                                    (51)
	Exp15 -> 'false'                                   (52)
	Exp15 -> Id                                        (53)
	Exp15 -> Id '(' ListExp ')'                        (54)
	Exp15 -> '(' Exp ')'                               (55)
	Exp14 -> Exp15 '++'                                (56)
	Exp14 -> Exp15 '--'                                (57)
	Exp14 -> '++' Exp14                                (58)
	Exp14 -> Exp15                                     (59)
	Exp13 -> '--' Exp14                                (60)
	Exp13 -> '-' Exp14                                 (61)
	Exp13 -> Exp14                                     (62)
	Exp12 -> Exp12 '*' Exp13                           (63)
	Exp12 -> Exp12 '/' Exp13                           (64)
	Exp12 -> Exp13                                     (65)
	Exp11 -> Exp11 '+' Exp12                           (66)
	Exp11 -> Exp11 '-' Exp12                           (67)
	Exp11 -> Exp12                                     (68)
	Exp9 -> Exp9 '<' Exp10                             (69)
	Exp9 -> Exp9 '>' Exp10                             (70)
	Exp9 -> Exp9 '<=' Exp10                            (71)
	Exp9 -> Exp9 '>=' Exp10                            (72)
	Exp9 -> Exp10                                      (73)
	Exp8 -> Exp8 '==' Exp9                             (74)
	Exp8 -> Exp8 '!=' Exp9                             (75)
	Exp8 -> Exp9                                       (76)
	Exp4 -> Exp4 '&&' Exp5                             (77)
	Exp4 -> Exp5                                       (78)
	Exp3 -> Exp3 '||' Exp4                             (79)
	Exp3 -> Exp4                                       (80)
	Exp2 -> Exp3 '=' Exp2                              (81)
	Exp2 -> Exp3                                       (82)
	Exp -> Exp1                                        (83)
	Exp1 -> Exp2                                       (84)
	Exp5 -> Exp6                                       (85)
	Exp6 -> Exp7                                       (86)
	Exp7 -> Exp8                                       (87)
	Exp10 -> Exp11                                     (88)
	ListExp ->                                         (89)
	ListExp -> Exp                                     (90)
	ListExp -> Exp ',' ListExp                         (91)
	Type -> 'bool'                                     (92)
	Type -> 'double'                                   (93)
	Type -> 'int'                                      (94)
	Type -> 'string'                                   (95)
	Type -> 'void'                                     (96)
	ListId ->                                          (97)
	ListId -> Id                                       (98)
	ListId -> Id ',' ListId                            (99)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'&&'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'--'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'double'       { PT _ (TS _ 20) }
	'else'         { PT _ (TS _ 21) }
	'false'        { PT _ (TS _ 22) }
	'if'           { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'return'       { PT _ (TS _ 25) }
	'string'       { PT _ (TS _ 26) }
	'true'         { PT _ (TS _ 27) }
	'void'         { PT _ (TS _ 28) }
	'while'        { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'||'           { PT _ (TS _ 31) }
	'}'            { PT _ (TS _ 32) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp9    rule  12
	%start_pExp8    rule  13
	%start_pExp4    rule  14
	%start_pExp3    rule  15
	%start_pExp2    rule  16
	%start_pExp     rule  17
	%start_pExp1    rule  18
	%start_pExp5    rule  19
	%start_pExp6    rule  20
	%start_pExp7    rule  21
	%start_pExp10   rule  22
	%start_pListExp rule  23
	%start_pType    rule  24
	%start_pListId  rule  25
	Integer         rule  26
	Double          rule  27
	String          rule  28
	Id              rule  29
	Program         rule  30
	ListDef         rules 31, 32
	Def             rule  33
	ListArg         rules 34, 35, 36
	ListStm         rules 37, 38
	Arg             rule  39
	Stm             rules 40, 41, 42, 43, 44, 45, 46, 47
	Exp15           rules 48, 49, 50, 51, 52, 53, 54, 55
	Exp14           rules 56, 57, 58, 59
	Exp13           rules 60, 61, 62
	Exp12           rules 63, 64, 65
	Exp11           rules 66, 67, 68
	Exp9            rules 69, 70, 71, 72, 73
	Exp8            rules 74, 75, 76
	Exp4            rules 77, 78
	Exp3            rules 79, 80
	Exp2            rules 81, 82
	Exp             rule  83
	Exp1            rule  84
	Exp5            rule  85
	Exp6            rule  86
	Exp7            rule  87
	Exp10           rule  88
	ListExp         rules 89, 90, 91
	Type            rules 92, 93, 94, 95, 96
	ListId          rules 97, 98, 99

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         reduce using rule 31
	'double'       reduce using rule 31
	'int'          reduce using rule 31
	'string'       reduce using rule 31
	'void'         reduce using rule 31
	%eof           reduce using rule 31

	Program        goto state 97
	ListDef        goto state 98

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'bool'         reduce using rule 31
	'double'       reduce using rule 31
	'int'          reduce using rule 31
	'string'       reduce using rule 31
	'void'         reduce using rule 31
	%eof           reduce using rule 31

	ListDef        goto state 96

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Def            goto state 94
	Type           goto state 95

State 3

	%start_pListArg -> . ListArg                        (rule 3)

	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36
	%eof           reduce using rule 34

	ListArg        goto state 92
	Arg            goto state 93
	Type           goto state 90

State 4

	%start_pListStm -> . ListStm                        (rule 4)

	'('            reduce using rule 37
	'++'           reduce using rule 37
	'-'            reduce using rule 37
	'--'           reduce using rule 37
	'bool'         reduce using rule 37
	'double'       reduce using rule 37
	'false'        reduce using rule 37
	'if'           reduce using rule 37
	'int'          reduce using rule 37
	'return'       reduce using rule 37
	'string'       reduce using rule 37
	'true'         reduce using rule 37
	'void'         reduce using rule 37
	'while'        reduce using rule 37
	'{'            reduce using rule 37
	L_integ        reduce using rule 37
	L_doubl        reduce using rule 37
	L_quoted       reduce using rule 37
	L_Id           reduce using rule 37
	%eof           reduce using rule 37

	ListStm        goto state 91

State 5

	%start_pArg -> . Arg                                (rule 5)

	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Arg            goto state 89
	Type           goto state 90

State 6

	%start_pStm -> . Stm                                (rule 6)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'false'        shift, and enter state 62
	'if'           shift, and enter state 85
	'int'          shift, and enter state 34
	'return'       shift, and enter state 86
	'string'       shift, and enter state 35
	'true'         shift, and enter state 63
	'void'         shift, and enter state 36
	'while'        shift, and enter state 87
	'{'            shift, and enter state 88
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Stm            goto state 82
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 83
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56
	Type           goto state 84

State 7

	%start_pExp15 -> . Exp15                            (rule 7)

	'('            shift, and enter state 58
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 81

State 8

	%start_pExp14 -> . Exp14                            (rule 8)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 80

State 9

	%start_pExp13 -> . Exp13                            (rule 9)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 79

State 10

	%start_pExp12 -> . Exp12                            (rule 10)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 78

State 11

	%start_pExp11 -> . Exp11                            (rule 11)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 77

State 12

	%start_pExp9 -> . Exp9                              (rule 12)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 76
	Exp10          goto state 56

State 13

	%start_pExp8 -> . Exp8                              (rule 13)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 75
	Exp10          goto state 56

State 14

	%start_pExp4 -> . Exp4                              (rule 14)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 74
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 15

	%start_pExp3 -> . Exp3                              (rule 15)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 73
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 16

	%start_pExp2 -> . Exp2                              (rule 16)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 72
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 17

	%start_pExp -> . Exp                                (rule 17)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 71
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 18

	%start_pExp1 -> . Exp1                              (rule 18)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp1           goto state 70
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 19

	%start_pExp5 -> . Exp5                              (rule 19)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp5           goto state 69
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56

State 20

	%start_pExp6 -> . Exp6                              (rule 20)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp6           goto state 68
	Exp7           goto state 55
	Exp10          goto state 56

State 21

	%start_pExp7 -> . Exp7                              (rule 21)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp7           goto state 67
	Exp10          goto state 56

State 22

	%start_pExp10 -> . Exp10                            (rule 22)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp10          goto state 66

State 23

	%start_pListExp -> . ListExp                        (rule 23)

	'('            shift, and enter state 58
	'++'           shift, and enter state 59
	'-'            shift, and enter state 60
	'--'           shift, and enter state 61
	'false'        shift, and enter state 62
	'true'         shift, and enter state 63
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 64
	L_quoted       shift, and enter state 65
	L_Id           shift, and enter state 30
	%eof           reduce using rule 89

	Integer        goto state 37
	Double         goto state 38
	String         goto state 39
	Id             goto state 40
	Exp15          goto state 41
	Exp14          goto state 42
	Exp13          goto state 43
	Exp12          goto state 44
	Exp11          goto state 45
	Exp9           goto state 46
	Exp8           goto state 47
	Exp4           goto state 48
	Exp3           goto state 49
	Exp2           goto state 50
	Exp            goto state 51
	Exp1           goto state 52
	Exp5           goto state 53
	Exp6           goto state 54
	Exp7           goto state 55
	Exp10          goto state 56
	ListExp        goto state 57

State 24

	%start_pType -> . Type                              (rule 24)

	'bool'         shift, and enter state 32
	'double'       shift, and enter state 33
	'int'          shift, and enter state 34
	'string'       shift, and enter state 35
	'void'         shift, and enter state 36

	Type           goto state 31

State 25

	%start_pListId -> . ListId                          (rule 25)

	L_Id           shift, and enter state 30
	%eof           reduce using rule 97

	Id             goto state 28
	ListId         goto state 29

State 26

	Integer -> . L_integ                                (rule 26)

	L_integ        shift, and enter state 27


State 27

	Integer -> L_integ .                                (rule 26)

	'!='           reduce using rule 26
	'&&'           reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	'++'           reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'--'           reduce using rule 26
	'/'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'='            reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'||'           reduce using rule 26
	%eof           reduce using rule 26


State 28

	ListId -> Id .                                      (rule 98)
	ListId -> Id . ',' ListId                           (rule 99)

	','            shift, and enter state 131
	';'            reduce using rule 98
	%eof           reduce using rule 98


State 29

	%start_pListId -> ListId .                          (rule 25)

	%eof           accept


State 30

	Id -> L_Id .                                        (rule 29)

	'!='           reduce using rule 29
	'&&'           reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	'++'           reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'--'           reduce using rule 29
	'/'            reduce using rule 29
	';'            reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'='            reduce using rule 29
	'=='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'||'           reduce using rule 29
	%eof           reduce using rule 29


State 31

	%start_pType -> Type .                              (rule 24)

	%eof           accept


State 32

	Type -> 'bool' .                                    (rule 92)

	L_Id           reduce using rule 92
	%eof           reduce using rule 92


State 33

	Type -> 'double' .                                  (rule 93)

	L_Id           reduce using rule 93
	%eof           reduce using rule 93


State 34

	Type -> 'int' .                                     (rule 94)

	L_Id           reduce using rule 94
	%eof           reduce using rule 94


State 35

	Type -> 'string' .                                  (rule 95)

	L_Id           reduce using rule 95
	%eof           reduce using rule 95


State 36

	Type -> 'void' .                                    (rule 96)

	L_Id           reduce using rule 96
	%eof           reduce using rule 96


State 37

	Exp15 -> Integer .                                  (rule 48)

	'!='           reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	'++'           reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'--'           reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'='            reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48
	%eof           reduce using rule 48


State 38

	Exp15 -> Double .                                   (rule 49)

	'!='           reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	'++'           reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'--'           reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'='            reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49
	%eof           reduce using rule 49


State 39

	Exp15 -> String .                                   (rule 50)

	'!='           reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	'++'           reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'--'           reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'='            reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50
	%eof           reduce using rule 50


State 40

	Exp15 -> Id .                                       (rule 53)
	Exp15 -> Id . '(' ListExp ')'                       (rule 54)

	'!='           reduce using rule 53
	'&&'           reduce using rule 53
	'('            shift, and enter state 130
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	'++'           reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'--'           reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'='            reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'||'           reduce using rule 53
	%eof           reduce using rule 53


State 41

	Exp14 -> Exp15 . '++'                               (rule 56)
	Exp14 -> Exp15 . '--'                               (rule 57)
	Exp14 -> Exp15 .                                    (rule 59)

	'!='           reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           shift, and enter state 128
	','            reduce using rule 59
	'-'            reduce using rule 59
	'--'           shift, and enter state 129
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'='            reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'||'           reduce using rule 59
	%eof           reduce using rule 59


State 42

	Exp13 -> Exp14 .                                    (rule 62)

	'!='           reduce using rule 62
	'&&'           reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'/'            reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'='            reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	'||'           reduce using rule 62
	%eof           reduce using rule 62


State 43

	Exp12 -> Exp13 .                                    (rule 65)

	'!='           reduce using rule 65
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'='            reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'||'           reduce using rule 65
	%eof           reduce using rule 65


State 44

	Exp12 -> Exp12 . '*' Exp13                          (rule 63)
	Exp12 -> Exp12 . '/' Exp13                          (rule 64)
	Exp11 -> Exp12 .                                    (rule 68)

	'!='           reduce using rule 68
	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            shift, and enter state 110
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            shift, and enter state 111
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'||'           reduce using rule 68
	%eof           reduce using rule 68


State 45

	Exp11 -> Exp11 . '+' Exp12                          (rule 66)
	Exp11 -> Exp11 . '-' Exp12                          (rule 67)
	Exp10 -> Exp11 .                                    (rule 88)
